Adds additional code documentation, adds content to bombardiers.html

--- a/src/about.html
+++ b/src/about.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+    <!-- HEADER -->
     <div id=header-container-subpage>
         <div id="header-up">
             <div id="header-left">
@@ -51,6 +52,7 @@
         </div>
     </div>
     <canvas id="webgl" style="opacity:0%;"></canvas>
+    <!-- ABOUT -->
     <div class="page-content">
         <div class="top-content">
             <a class="back-home-button" href="index.html">&lt; Back to Home</a>
