--- a/src/index.html
+++ b/src/index.html
@@ -16,11 +16,13 @@
 </head>
 
 <body>
+    <!-- FRONT PAGE -->
     <div class="front-content">
         <p id="front-name">Hi! I'm Caroline Pang.</p>
         <p id="front-description">I'm currently a Junior at Carnegie Mellon University double-majoring in 
             Electrical and Computer Engineering and Human Computer Interaction.</p>
     </div>
+    <!-- HEADER -->
     <div id=header-container>
         <div id="header-up">
             <div id="header-left">
@@ -55,6 +57,7 @@
             <input id="command-line" name="command-line" type="text" placeholder="Type --help to see commands" required/>
         </div>
     </div>
+    <!-- CANVAS -->
     <canvas id="webgl"></canvas>
 </body>
 </html>
