--- a/src/projects.html
+++ b/src/projects.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+    <!-- HEADER -->
     <div id=header-container-subpage>
         <div id="header-up">
             <div id="header-left">
@@ -52,9 +53,10 @@
         </div>
     </div>
     <canvas id="webgl" style="opacity:0%;"></canvas>
+    <!-- PROJECTS -->
     <div class="page-content">
         <div class="top-content">
-            <button class="back-home-button" href="index.html">&lt; Back to Home</button>
+            <a class="back-home-button" href="index.html">&lt; Back to Home</a>
             <p class="page-title">Project Gallery</p>
         </div>
         <div class="content-container">
