--- a/src/scooter.html
+++ b/src/scooter.html
@@ -52,15 +52,39 @@
         </div>
     </div>
     <canvas id="webgl" style="opacity:0%;"></canvas>
-    <!-- RESUME -->
+    <!-- PROJECT DETAILS -->
     <div class="page-content">
-        <div class="top-content">
-            <a class="back-home-button" href="index.html">&lt; Back to Home</a>
-            <p class="page-title">Resume</p>
+        <div id="project-top-content">
+            <div id="project-top-content-left">
+                <a id="back-to-projects" href="projects.html">Project Gallery</a>
+                <span id="project-title">/ Foldable Electric Scooter</span>
+            </div>
+            <div id="project-date">
+                <span>Fall 2019</span>
+            </div>
         </div>
-        <div class="resume-content-container">
-            <iframe id="resume" src="assets/resume.pdf"></iframe>
+        <div class="project-content-container">
+            <div id="project-header-left">
+                <img class="project-img1" src="assets/bombardiers-level-select.png" alt="Level Selection screen from Bombardiers Game">
+                <img class="project-img1" src="assets/bombardiers-rules.png" alt="Game mode rules screen from Bombardiers Game">
+                <img class="project-img1" src="assets/bombardiers-cover.png" alt="Bombardiers screenshot of gameplay">
+            </div>
+            <div id="project-header-right">
+                <p>As a capstone project for one of my Computer Science courses, I developed a turn-based physics simulation game in Python called Bombardiers.</p>
+                <p>Based off of an old iOS game, the objective of this turn-based strategy game is to destroy the opponents base by launching missiles across an asteroid field. Whoever destroys the opponent's forcefield first is the winner.</p>
+                <br>
+                <br>
+                <p>This game has three modes: multiplayer,  single player, and a bonus sandbox mode. Each level contains different orientations and sizes of planets, whose gravitational fields affect the trajectory of the projectiles. To allow for a single player mode, I programmed a game AI system to simulate the opponent. </p>
+                <p>The source code for this project can be found on my Github.</p>
+            </div>
+
+    
         </div>
     </div>
 </body>
 </html>
+
+<!-- 
+
+    
+ -->
