--- a/src/bombardiers.html
+++ b/src/bombardiers.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+    <!-- HEADER -->
     <div id=header-container-subpage>
         <div id="header-up">
             <div id="header-left">
@@ -52,6 +53,7 @@
         </div>
     </div>
     <canvas id="webgl" style="opacity:0%;"></canvas>
+    <!-- PROJECT DETAILS -->
     <div class="page-content">
         <div id="project-top-content">
             <div id="project-top-content-left">
@@ -63,7 +65,21 @@
             </div>
         </div>
         <div class="project-content-container">
-            <img id="project-img1" src="assets/bombardiers-level-select.png" alt="Level Selection screen from Bombardiers Game">
+            <div id="project-header-left">
+                <img class="project-img1" src="assets/bombardiers-level-select.png" alt="Level Selection screen from Bombardiers Game">
+                <img class="project-img1" src="assets/bombardiers-rules.png" alt="Game mode rules screen from Bombardiers Game">
+                <img class="project-img1" src="assets/bombardiers-cover.png" alt="Bombardiers screenshot of gameplay">
+            </div>
+            <div id="project-header-right">
+                <p>As a capstone project for one of my Computer Science courses, I developed a turn-based physics simulation game in Python called Bombardiers.</p>
+                <p>Based off of an old iOS game, the objective of this turn-based strategy game is to destroy the opponents base by launching missiles across an asteroid field. Whoever destroys the opponent's forcefield first is the winner.</p>
+                <br>
+                <br>
+                <p>This game has three modes: multiplayer,  single player, and a bonus sandbox mode. Each level contains different orientations and sizes of planets, whose gravitational fields affect the trajectory of the projectiles. To allow for a single player mode, I programmed a game AI system to simulate the opponent. </p>
+                <p>The source code for this project can be found on my Github.</p>
+            </div>
+
+    
         </div>
     </div>
 </body>
