Adds content to scooter project page

--- a/src/scooter.html
+++ b/src/scooter.html
@@ -65,17 +65,24 @@
         </div>
         <div class="project-content-container">
             <div id="project-header-left">
-                <img class="project-img1" src="assets/bombardiers-level-select.png" alt="Level Selection screen from Bombardiers Game">
-                <img class="project-img1" src="assets/bombardiers-rules.png" alt="Game mode rules screen from Bombardiers Game">
-                <img class="project-img1" src="assets/bombardiers-cover.png" alt="Bombardiers screenshot of gameplay">
+                <img class="project-img1" src="assets/scooter-sketch-1.png" alt="Initial concept drawing of folded scooter">
+                <img class="project-img1" src="assets/scooter-sketch-2.png" alt="Initial concept drawing of process of folding scooter">
+                <p class="caption">Above: Initial concept sketches.</p>
+                <p class="caption">Below: Final Deck CAD Model and Folding Demonstration</p>
+                <img class="project-img1" src="assets/scooter-cad.png" alt="Game mode rules screen from Bombardiers Game">
             </div>
             <div id="project-header-right">
-                <p>As a capstone project for one of my Computer Science courses, I developed a turn-based physics simulation game in Python called Bombardiers.</p>
-                <p>Based off of an old iOS game, the objective of this turn-based strategy game is to destroy the opponents base by launching missiles across an asteroid field. Whoever destroys the opponent's forcefield first is the winner.</p>
-                <br>
-                <br>
-                <p>This game has three modes: multiplayer,  single player, and a bonus sandbox mode. Each level contains different orientations and sizes of planets, whose gravitational fields affect the trajectory of the projectiles. To allow for a single player mode, I programmed a game AI system to simulate the opponent. </p>
-                <p>The source code for this project can be found on my Github.</p>
+                <p class="section-header">Design</p>
+                <p>As a capstone project for one of my engineering classes, I designed and constructed a fully functional portable electric scooter from scratch.</p>
+                <p>My goal for this project was to redesign a traditional electric scooter to be more portable and therefore easier to store and transport. I noticed that traditional electric scooters were heavy and only folded at one joint, making them clunky and difficult to carry onto public transportation or store at school.</p>
+                <p>Therefore, I set out to explore a variety of ways in which electric scooters could be compacted down into a portable form. After numerous iterations and careful planning of measurements, I ended up with the final deck CAD Model pictured to the left. </p>
+                <p>For a better view of the model, I recommend checking out this link hosted by the CAD software I used.</p>
+                <a class="underline" href="https://a360.co/2VpPvvA">Link to CAD Model</a>
+                <p> Click on the “Explode Model” Icon and move the slider around to see what’s going on inside the deck! </p>
+                <p class="section-header">Construction</p>
+                <p>I constructed the final scooter using laser-cut pieces to form deck, three hand-cut aluminum rods for the handlebars, a 3D printed joint to secure the handlebars, an LCD monitor, an Arduino, and an in-wheel motor powered by batteries stored inside the deck.</p>
+                <p>I used the Aruduio to display information on the LCD monitor such as speed, RPM, and distance travelled. These metrics were captured from a sensor located on the back wheel.</p>
+                <p>The manufacturing process was the most challenging part of the project, as I ran into complications with building the joints from the materials I had available. However, by the end of the project, the scooter was completely ridable for short distances. Overall, it was a very rewarding project being able to take an idea and implement it from start to finish.</p>
             </div>
 
     
