Fixes scooter dates, adds content about Looma project

--- a/src/looma.html
+++ b/src/looma.html
@@ -57,36 +57,27 @@
         <div id="project-top-content">
             <div id="project-top-content-left">
                 <a id="back-to-projects" href="projects.html">Project Gallery</a>
-                <span id="project-title">/ Foldable Electric Scooter</span>
+                <span id="project-title">/ Looma Education</span>
             </div>
             <div id="project-date">
-                <span>Fall 2019</span>
+                <span>Summer 2018, 2020</span>
             </div>
         </div>
         <div class="project-content-container">
             <div id="project-header-left">
-                <img class="project-img1" src="assets/scooter-sketch-1.png" alt="Initial concept drawing of folded scooter">
-                <img class="project-img1" src="assets/scooter-sketch-2.png" alt="Initial concept drawing of process of folding scooter">
-                <p class="caption">Above: Initial concept sketches.</p>
-                <p class="caption">Below: Final Deck CAD Model and Folding Demonstration</p>
-                <img class="project-img1" src="assets/scooter-cad.png" alt="Multistep diagarm of CAD scooter unfolding">
-                <img class="project-img1" src="assets/scooter-final.png" alt="Picture of final scooter folded">
+                <img class="project-img1" src="assets/looma-game.png" alt="Image of Looma matching game interface">
+                <img class="project-img1" src="assets/lesson.png" alt="Example of teaching slide from English class lesson plan">
+                <img class="project-img1" src="assets/casing-model.png" alt="Exploded view CAD model of Looma casing">
+                <img class="project-img1" src="assets/casing-real.png" alt="Picture of final constructed casing with hardware components">
             </div>
             <div id="project-header-right">
-                <p class="section-header">Design</p>
-                <p>As a capstone project for one of my engineering classes, I designed and constructed a fully functional portable electric scooter from scratch.</p>
-                <p>My goal for this project was to redesign a traditional electric scooter to be more portable and therefore easier to store and transport. I noticed that traditional electric scooters were heavy and only folded at one joint, making them clunky and difficult to carry onto public transportation or store at school.</p>
-                <p>Therefore, I set out to explore a variety of ways in which electric scooters could be compacted down into a portable form. After numerous iterations and careful planning of measurements, I ended up with the final deck CAD Model pictured to the left. </p>
-                <p>For a better view of the model, I recommend checking out this link hosted by the CAD software I used.</p>
-                <a class="underline" href="https://a360.co/2VpPvvA">Link to CAD Model</a>
-                <p> Click on the “Explode Model” Icon and move the slider around to see what’s going on inside the deck! </p>
-                <p class="section-header">Construction</p>
-                <p>I constructed the final scooter using laser-cut pieces to form deck, three hand-cut aluminum rods for the handlebars, a 3D printed joint to secure the handlebars, an LCD monitor, an Arduino, and an in-wheel motor powered by batteries stored inside the deck.</p>
-                <p>I used the Aruduio to display information on the LCD monitor such as speed, RPM, and distance travelled. These metrics were captured from a sensor located on the back wheel.</p>
-                <p>The manufacturing process was the most challenging part of the project, as I ran into complications with building the joints from the materials I had available. However, by the end of the project, the scooter was completely ridable for short distances. Overall, it was a very rewarding project being able to take an idea and implement it from start to finish.</p>
+                <p class="section-header">Summer 2020 • Lesson Design, Programming</p>
+                <p>In Summer 2020, I had the opportunity to help develop part of the educational game library for Looma Education, a non-profit company whose mission is to harness technology to benefit schools in rural Nepal. Over the course of the summer, I lead a team of interns in designing lesson plans and accompanying multi-media presentations and also programmed games for thier game library using HTML, CSS, and JS. </p>
+                <p>I primarily worked on creating English lessons and designing a language learning game. I was able to work remotely with Nepali college students and interview them about their individual experiences with the Nepali education system, their experiences teaching elementary schools students, and about other cultural differences between the US and Nepal. This helped me better design the lessons to fit the customs and cultures of Nepal.</p>
+                <p class="section-header">Summer 2018 • Hardware Design</p>
+                <p>Two summers prior, I worked with a partner to redesign the casing for the Looma Education computer projection system and the charge controller system. We had to take into account all of the existing hardware such as the projector, microcomputer, speakers, ports, etc.,  and design the casing to strategically and efficiently organize all of the internal components. On top of this, it was important for the design to have intuitive external controls and be easily assembled from parts. </p>
+                <p>Using CAD software, we designed each piece from scratch so that every joint could seamlessly fit together. We ended up constructing 6 additional boxes by the end of the project, and this design has now been employed in over 20 schools in Nepal.</p>
             </div>
-
-    
         </div>
     </div>
 </body>
