--- a/src/projects.html
+++ b/src/projects.html
@@ -43,7 +43,7 @@
                     </div>
                 </template>
             </div>
-            <span>>></span>
+            <label id="t-label" for="command-line">Terminal >></label>
             <input id="command-line" name="command-line" type="text" placeholder="Type --help to see commands" required/>
         </div>
     </div>
