Adds project writeup

--- a/src/projects.html
+++ b/src/projects.html
@@ -70,10 +70,10 @@
                     <button id="looma-link"><img class="project-image project-image-glow" src="assets/looma-game.png" alt="Image of Looma matching game interface"></button>
                     <p class="project-caption">/ Looma Education</p>
                 </div>
-                <div class="project">
+                <!-- <div class="project">
                     <button id="extra-link"><img class="project-image project-image-glow" src="assets/Untitled_Artwork.png" alt="Picture"></button>
                     <p class="project-caption">/ Extras</p>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
