Adds stars to background

--- a/src/about.html
+++ b/src/about.html
@@ -5,7 +5,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="js/animation.js" type="module"></script>
+    <script src="js/stars.js" type="module"></script>
     <script defer src="js/main.js" type="module"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -47,6 +47,7 @@
         </div>
     </div>
     <canvas id="webgl" style="opacity:0%;"></canvas>
+    <canvas id="stars"></canvas>
     <!-- ABOUT -->
     <div class="page-content">
         <div class="top-content">
