--- a/src/bombardiers.html
+++ b/src/bombardiers.html
@@ -5,7 +5,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="js/animation.js" type="module"></script>
+    <script src="js/stars.js" type="module"></script>
     <script defer src="js/main.js" type="module"></script>
     <script defer src="js/bombardiers.js" type="module"></script>
     <meta charset="UTF-8">
@@ -48,6 +48,7 @@
         </div>
     </div>
     <canvas id="webgl" style="opacity:0%;"></canvas>
+    <canvas id="stars"></canvas>
     <!-- PROJECT DETAILS -->
     <div class="page-content">
         <div id="project-top-content">
