Updates bio information

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     <!-- FRONT PAGE -->
     <div class="front-content">
         <p id="front-name">Hi! I'm Caroline Pang.</p>
-        <p id="front-description">I'm currently a Junior at Carnegie Mellon University double-majoring in 
+        <p id="front-description">I'm currently a Senior at Carnegie Mellon University double-majoring in 
             Electrical and Computer Engineering and Human Computer Interaction.</p>
     </div>
     <!-- HEADER -->
